# libft

./: CMakeLists.txt  Makefile  author  endl.c  free_str.c  ft_atoi.c  ft_atoi_base.c  ft_itoa.c  ft_log.c  ft_lstiter.c  ft_memalloc.c  ft_putnbr.c  ft_putstr_fd.c  ft_realloc.c  ft_strchr_safe.c  ft_strequ.c  ft_striter.c  ft_strlen.c  ft_strncpy.c  ft_strsplit.c  ft_strsub.c  ft_tolower.c  libft.h  main.c  pf_test.c
includes/: get_next_line.h  libft.h  mini_pf.h  t_string.h
libft/: error_notice.c  fract.c  ft_atoll.c  ft_atoll_base.c  ft_atoul.c  ft_atoul_base.c  ft_clear.c  ft_isalnum.c  ft_isdigit.c  ft_isprint.c  ft_iswhitespace.c  ft_ldel.c  ft_lltoa_base.c  ft_log.c  ft_lst_clear.c  ft_lstadd.c  ft_lstadd_end.c  ft_lstdel.c  ft_lstmap.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_pow_uint.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_base.c  ft_putnbr_fd.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strcpy_safe.c  ft_strdel.c  ft_strdup_safe.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  (+15 more)
mini_pf/: mini_pf.c
sources/: ft_bzero.c  ft_fswap.c  ft_isalpha.c  ft_isascii.c  ft_itoa_base.c  ft_lstdelone.c  ft_memcmp.c  ft_memmove.c  ft_pow_uint.c  ft_putchar.c  ft_putchar_fd.c  ft_putstr.c  ft_strcat.c  ft_strdup.c  ft_strjoin.c  ft_strmap.c  ft_strrchr.c  ft_strstr.c  ft_strtrim.c  ft_word_counter.c  micro_pf.c
t_string/: dg_append.c  dg_atoi.c  dg_atoi_base.c  dg_count_char.c  dg_cpy.c  dg_free.c  dg_insert.c  dg_itoa.c  dg_itoa_base.c  dg_lltoa.c  dg_strchr.c  dg_strcmp.c  dg_strdup.c  dg_strequ.c  dg_strjoin.c  dg_strlen.c  dg_strmlen.c  dg_strncmp.c  dg_strndup.c  dg_strnequ.c  dg_strnstr.c  dg_strrchr.c  dg_strsplit.c  dg_strstr.c  dg_strsub.c  dg_strtrim.c  dg_word_counter.c  init_str.c
